build/log/idf_py_stdout_output_25692
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\bogda\Documents\mouse-firm\build\bootloader\esp-idf\esptool_py && C:\Users\bogda\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/bogda/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/bogda/Documents/mouse-firm/build/bootloader/bootloader.bin"
Bootloader binary size 0x51a0 bytes. 0x2e60 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
ccache C:\Users\bogda\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/bogda/Documents/mouse-firm/build/config -IC:/Users/bogda/Documents/mouse-firm/main -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/soc/esp32s3 -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/soc/esp32s3/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/soc/esp32s3/register -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/hal/esp32s3/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3 -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/xtensa/esp32s3/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/xtensa/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/include/apps -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/port/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/bogda/Documents/mouse-firm/components/PMW3360 -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_pm/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_timer/include -IC:/Users/bogda/Documents/mouse-firm/managed_components/espressif__tinyusb/src -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/spi_flash/include -IC:/Users/bogda/Documents/mouse-firm/managed_components/espressif__esp_tinyusb/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/fatfs/diskio -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/fatfs/src -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/fatfs/vfs -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/wear_levelling/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_partition/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/sdmmc/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/esp_driver_sdspi/include -IC:/Users/bogda/esp/v5.5.1/esp-idf/components/vfs/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/bogda/Documents/mouse-firm=. -fmacro-prefix-map=C:/Users/bogda/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -DCFG_TUSB_MCU=OPT_MCU_ESP32S3 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c C:/Users/bogda/Documents/mouse-firm/main/main.cpp
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::data4_io_num' [-Wmissing-field-initializers]
   32 | };
      | ^
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::data5_io_num' [-Wmissing-field-initializers]
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::data6_io_num' [-Wmissing-field-initializers]
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::data7_io_num' [-Wmissing-field-initializers]
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::data_io_default_level' [-Wmissing-field-initializers]
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::max_transfer_sz' [-Wmissing-field-initializers]
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::flags' [-Wmissing-field-initializers]
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::isr_cpu_id' [-Wmissing-field-initializers]
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:32:1: warning: missing initializer for member 'spi_bus_config_t::intr_flags' [-Wmissing-field-initializers]
C:/Users/bogda/Documents/mouse-firm/main/main.cpp:49:6: error: ambiguating new declaration of 'void tud_hid_get_report_cb(uint8_t, uint8_t, hid_report_type_t, uint8_t*, uint16_t)'
   49 | void tud_hid_get_report_cb(uint8_t instance, uint8_t report_id, hid_report_type_t report_type,
      |      ^~~~~~~~~~~~~~~~~~~~~
In file included from C:/Users/bogda/Documents/mouse-firm/managed_components/espressif__tinyusb/src/tusb.h:80,
                 from C:/Users/bogda/Documents/mouse-firm/managed_components/espressif__esp_tinyusb/include/tinyusb.h:12,
                 from C:/Users/bogda/Documents/mouse-firm/main/main.cpp:7:
C:/Users/bogda/Documents/mouse-firm/managed_components/espressif__tinyusb/src/class/hid/hid_device.h:135:10: note: old declaration 'uint16_t tud_hid_get_report_cb(uint8_t, uint8_t, hid_report_type_t, uint8_t*, uint16_t)'
  135 | uint16_t tud_hid_get_report_cb(uint8_t instance, uint8_t report_id, hid_report_type_t report_type, uint8_t* buffer, uint16_t reqlen);
      |          ^~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
